updayed the code for the feign client calls in the pricin-servife